<resources>
    <string name="app_name">jpdOnSite</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="bad_login">Incorrect username or password</string>

    <string name="job_title">Loading...</string>
    <string name="add_job_photo">Add Photo</string>
    <string name="job_num"> Job %1$s</string>
    <string name="refresh">Refresh</string>
    <string name="from_gallery">Choose from Gallery</string>

    <string name="client_id">768533009145-og2gmcmfbk0008j3r3n8arhl73alahna.apps.googleusercontent.com</string>
</resources>