<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/add_job_photo"/>

        <Button
            android:id="@+id/fromGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_gallery"
            android:contentDescription="@string/from_gallery"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photoRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>